--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "changesets",
   "version": "0.0.1",
-  "description": "",
-  "main": "src/index.js",
+  "description": "Immutable Change Buffers",
+  "main": "dist/index.js",
   "scripts": {
     "test": "karma start"
   },
