--- a/package.json
+++ b/package.json
@@ -4,23 +4,25 @@
   "description": "Immutable Change Buffers",
   "main": "dist/index.js",
   "scripts": {
-    "test": "karma start"
+    "test": "karma start",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "awesome-typescript-loader": "^2.2.1",
     "chai": "^3.5.0",
+    "clean-webpack-plugin": "^0.1.10",
+    "json-loader": "^0.5.4",
     "karma": "^1.2.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-mocha": "^1.1.1",
-    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-mocha-reporter": "^2.1.0",
     "karma-sinon": "^1.0.5",
     "karma-typescript-preprocessor2": "^1.2.1",
     "karma-webpack": "^1.8.0",
     "mocha": "^3.0.2",
-    "phantomjs-prebuilt": "^2.1.12",
-    "ts-loader": "^0.8.2",
     "typescript": "^2.0.2",
     "webpack": "^1.13.2"
   },
