--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "karma start",
-    "build": "webpack"
+    "build": "webpack",
+    "clean": "rm -rf build dist"
   },
   "author": "",
   "license": "ISC",
