--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es5",
+    "target": "es6",
     "noImplicitAny": false,
     "sourceMap": false,
-    "outDir": "build"
+    "outDir": "build",
+    "strictNullChecks": true
   },
   "compileOnSave": false,
   "exclude": [
