--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "license": "ISC",
   "devDependencies": {
     "awesome-typescript-loader": "^2.2.1",
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-lodash": "^3.2.8",
+    "babel-preset-es2015": "^6.14.0",
     "chai": "^3.5.0",
     "clean-webpack-plugin": "^0.1.10",
     "json-loader": "^0.5.4",
@@ -20,9 +24,9 @@
     "karma-chrome-launcher": "^2.0.0",
     "karma-mocha": "^1.1.1",
     "karma-mocha-reporter": "^2.1.0",
-    "karma-sinon": "^1.0.5",
     "karma-typescript-preprocessor2": "^1.2.1",
     "karma-webpack": "^1.8.0",
+    "lodash-webpack-plugin": "^0.10.0",
     "mocha": "^3.0.2",
     "typescript": "^2.0.2",
     "webpack": "^1.13.2"
