--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "change-buffer",
   "version": "0.0.1",
   "description": "Immutable Change Buffers",
-  "main": "dist/index.js",
+  "esnext:main": "dist/index.js",
+  "main": "dist/cjs/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
     "test": "karma start",
