--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,29 @@
+---
+sudo: required
+dist: trusty
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
+
 language: node_js
 node_js:
   - "4"
+
+cache:
+  directories:
+    - node_modules
+
+ before_install:
+  - npm config set spin false
+  - npm install -g bower
+  - bower --version
+  - export CHROME_BIN=/usr/bin/google-chrome
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+
+install:
+  - npm install
+  - bower install
