--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-es2015": "^6.14.0",
     "chai": "^3.5.0",
     "clean-webpack-plugin": "^0.1.10",
+    "diff": "^3.0.0",
     "json-loader": "^0.5.4",
     "karma": "^1.2.0",
     "karma-chai": "^0.1.0",
