--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ addons:
 
 language: node_js
 node_js:
-  - "5"
+  - "4"
 
 cache:
   directories:
@@ -27,3 +27,6 @@ cache:
 install:
   - npm install
   - bower install
+
+script:
+  - npm test
