--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "dist/cjs/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
-    "test": "karma start",
+    "test": "karma start --single-run",
+    "test:watch": "karma start",
     "bundle": "webpack",
     "compile": "npm run clean && tsc",
     "build": "npm run bundle && tsc",
@@ -22,6 +23,7 @@
     "babel-preset-es2015": "^6.14.0",
     "chai": "^3.5.0",
     "clean-webpack-plugin": "^0.1.10",
+    "diff": "^3.0.0",
     "json-loader": "^0.5.4",
     "karma": "^1.2.0",
     "karma-chai": "^0.1.0",
