--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "change-buffer",
   "version": "0.0.1",
   "description": "Immutable Change Buffers",
-  "main": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "esnext:main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "clean": "rm -rf build dist",
     "compile": "npm run clean && tsc -p tsconfig-prod.json",
