--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,14 @@ cache:
 
 before_install:
   - npm config set spin false
+  - npm install -g typings
   - export CHROME_BIN=/usr/bin/google-chrome
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
 
 install:
   - npm install
+  - typings install
 
 script:
   - npm test
