--- a/package.json
+++ b/package.json
@@ -2,42 +2,35 @@
   "name": "change-buffer",
   "version": "0.0.1",
   "description": "Immutable Change Buffers",
-  "esnext:main": "dist/index.js",
   "main": "dist/cjs/index.js",
+  "esnext:main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
-    "test": "karma start --single-run",
-    "test:watch": "karma start",
-    "bundle": "webpack",
-    "compile": "npm run clean && tsc",
-    "build": "npm run bundle && tsc",
-    "clean": "rm -rf build dist"
+    "clean": "rm -rf build dist",
+    "compile": "npm run clean && tsc -p tsconfig-prod.json",
+    "test": "npm run clean && tsc && ava",
+    "test:watch": "npm run test -- --watch"
   },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "awesome-typescript-loader": "^2.2.1",
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-lodash": "^3.2.8",
-    "babel-preset-es2015": "^6.14.0",
-    "chai": "^3.5.0",
-    "clean-webpack-plugin": "^0.1.10",
-    "diff": "^3.0.0",
-    "json-loader": "^0.5.4",
-    "karma": "^1.2.0",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-mocha": "^1.1.1",
-    "karma-mocha-reporter": "^2.1.0",
-    "karma-typescript-preprocessor2": "^1.2.1",
-    "karma-webpack": "^1.8.0",
-    "lodash-webpack-plugin": "^0.10.0",
-    "mocha": "^3.0.2",
-    "typescript": "^2.0.2",
-    "webpack": "^1.13.2"
+  "author": "Chris Freeman",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cafreeman/ChangeBuffer.git"
   },
+  "license": "MIT",
   "dependencies": {
     "lodash": "^4.15.0"
+  },
+  "devDependencies": {
+    "ava": "^0.16.0",
+    "typescript": "^2.0.2"
+  },
+  "ava": {
+    "files": [
+      "build/tests/**/*.spec.js"
+    ],
+    "source": [
+      "build/src/**/*.js"
+    ],
+    "verbose": true
   }
 }
