--- a/tsconfig-prod.json
+++ b/tsconfig-prod.json
@@ -3,15 +3,15 @@
     "module": "commonjs",
     "target": "es5",
     "noImplicitAny": false,
-    "sourceMap": false,
+    "sourceMap": true,
+    "declaration": true,
     "strictNullChecks": true,
-    "outDir": "build",
+    "outDir": "dist",
     "lib": ["es5", "es2015"]
   },
-  "compileOnSave": true,
+  "compileOnSave": false,
   "include": [
     "./src/**/*.ts",
-    "./tests/**/*.ts",
     "typings/index.d.ts"
   ]
 }
