--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "main": "dist/cjs/index.js",
   "esnext:main": "dist/index.js",
   "typings": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "clean": "rm -rf build dist",
-    "compile": "npm run clean && tsc -p tsconfig-prod.json",
+    "compile": "npm run clean && npm run build:cjs && npm run build:es6",
+    "build:cjs": "tsc -p tsconfig-prod.json --outDir dist/cjs",
+    "build:es6": "tsc -p tsconfig-prod.json -t es6 -m es2015",
     "test": "rm -rf build && tsc && ava",
     "test:watch": "npm run test -- --watch"
   },
